--- a/admin/index.html
+++ b/admin/index.html
@@ -6,5 +6,9 @@
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </head>
   <body>
+    <!-- Tu CMS będzie renderowany -->
+    <script>
+      CMS.init();
+    </script>
   </body>
 </html>
