Naprawa: opóźnienie inicjalizacji CMS (usuniecie CMS.init)

--- a/admin/index.html
+++ b/admin/index.html
@@ -6,9 +6,6 @@
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </head>
   <body>
-    <!-- Tu CMS będzie renderowany -->
-    <script>
-      CMS.init();
-    </script>
+    <!-- CMS wczyta się automatycznie, jeśli config.yml jest w admin/ -->
   </body>
 </html>
