--- a/admin/index.html
+++ b/admin/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Admin</title>
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <meta charset="utf-8">
+    <title>Netlify CMS</title>
+    <script src="https://unpkg.com/netlify-cms@^2.10.0/dist/netlify-cms.js"></script>
   </head>
   <body>
-    <!-- CMS wczyta się automatycznie, jeśli config.yml jest w admin/ -->
   </body>
 </html>
