--- a/admin/index.html
+++ b/admin/index.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Netlify CMS</title>
-    <script src="https://unpkg.com/netlify-cms@^2.10.0/dist/netlify-cms.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/netlify-cms@2.15.72/dist/netlify-cms.js"></script>
   </head>
   <body>
-    <div id="nc-root"></div>
+    <script>
+      window.addEventListener('DOMContentLoaded', function () {
+        const el = document.createElement('div');
+        el.id = 'nc-root';
+        document.body.appendChild(el);
+      });
+    </script>
   </body>
 </html>
