--- a/admin/index.html
+++ b/admin/index.html
@@ -6,12 +6,6 @@
     <script src="https://cdn.jsdelivr.net/npm/netlify-cms@2.15.72/dist/netlify-cms.js"></script>
   </head>
   <body>
-    <script>
-      window.addEventListener('DOMContentLoaded', function () {
-        const el = document.createElement('div');
-        el.id = 'nc-root';
-        document.body.appendChild(el);
-      });
-    </script>
+    <div id="nc-root"></div>
   </body>
 </html>
