--- a/admin/index.html
+++ b/admin/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <title>Netlify CMS</title>
     <script src="https://cdn.jsdelivr.net/npm/netlify-cms@2.15.72/dist/netlify-cms.js"></script>
+    <script>
+      console.log("CMS loaded");
+    </script>
   </head>
   <body>
     <div id="nc-root"></div>
