--- a/admin/index.html
+++ b/admin/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Netlify CMS</title>
-    <script src="https://cdn.jsdelivr.net/npm/netlify-cms@2.15.72/dist/netlify-cms.js"></script>
-    <script>
-      console.log("CMS loaded");
-    </script>
-  </head>
-  <body>
-    <div id="nc-root"></div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Netlify CMS</title>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script src="https://unpkg.com/netlify-cms@^2.54.0/dist/netlify-cms.js"></script>
+  <script>
+    console.log("CMS loaded");
+  </script>
+</head>
+<body>
+  <div id="nc-root"></div>
+</body>
 </html>
